# job-watcher

./: .gitignore  LICENSE  pyproject.toml  scrapy.cfg
job_watcher/: custom.py  items.py  middlewares.py  model.py  pipelines.py  settings.py
job_watcher/spiders/: utils.py
job_watcher/spiders/linkedin/: linkedin_spider.py  model.py
